tests/lean/448.lean.expected.out
448.lean:21:2-23:20: error: failed to synthesize
  MonadExceptOf IO.Error M

Note: Additional diagnostic information may be available using the `set_option diagnostics true` command.
